--- a/src/main/resources/static/common/css/contents_modify.css
+++ b/src/main/resources/static/common/css/contents_modify.css
@@ -1,4 +1,4 @@
-html,body { 
+html,body {
     overflow: hidden;
 }
 
@@ -18,7 +18,7 @@ textarea[readonly] {
     pointer-events: all;
 }
 
-#header { 
+#header {
     position: fixed;
 }
 
@@ -42,7 +42,7 @@ textarea[readonly] {
 jqgrid customize
 */
 
-.bTable input[type="file"], .bTable input[type="text"], .bTable input[type="number"], .bTable select, .bTable textarea {
+.bTable input[type="file"], .bTable input[type="text"], .bTable input[type="number"], .bTable input[type="password"], .bTable select, .bTable textarea {
     border: initial;
     text-align: initial;
     padding: 0 5px;
@@ -54,7 +54,7 @@ jqgrid customize
     line-height: 1.5;
     height: 26px;
     margin: 0;
-    font-size: inherit;    
+    font-size: inherit;
     outline: none;
 }
 
@@ -71,7 +71,7 @@ jqgrid customize
     width: 10px;
 }
 
-.ui-jqgrid div, .ui-jqgrid td {     
+.ui-jqgrid div, .ui-jqgrid td {
     font-size: 1.5rem;
     line-height: 26px;     /* row 의 높이 */
     color: #47474c;
@@ -144,9 +144,9 @@ jqgrid customize
     display: block;
 }
 
-.ui-jqgrid input, 
-.ui-jqgrid button, 
-.ui-jqgrid textarea, 
+.ui-jqgrid input,
+.ui-jqgrid button,
+.ui-jqgrid textarea,
 .ui-jqgrid select {
     -webkit-appearance: auto;
 }
@@ -166,7 +166,7 @@ jqgrid customize
 }
 
 .ui-jqgrid-labels .ui-th-column.ui-state-hover {
-    background: #3d4185;            /* 그리드 헤더 hover 배경 */ 
+    background: #3d4185;            /* 그리드 헤더 hover 배경 */
 }
 
 .navCenter span {
@@ -189,7 +189,7 @@ jqgrid customize
 #contents .contents-in {
     display: flex;
     flex-direction: column;
-    padding: 35px; 
+    padding: 35px;
 }
 
 #contents .gridSpacer {
@@ -225,7 +225,7 @@ jqgrid customize
 .ui-search-input select option {
     /* color: #fff; */
     font-size: 15px;
-  }
+}
 
 /* dashboard */
 .overall-status_re .weather-img span {
@@ -386,7 +386,7 @@ div.scrollY {
     width: 100%;
     height: 100%;
 }
-    
+
 .search-form.search-area {
     justify-content: left;
     margin-bottom: 0;
@@ -410,10 +410,10 @@ div.scrollY {
 }
 
 .flatpickr-time, .paginate {
-    -ms-user-select: none;    
-    -moz-user-select: -moz-none;   
-    -khtml-user-select: none;  
-    -webkit-user-select: none;   
+    -ms-user-select: none;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
     user-select: none;
 }
 
@@ -503,21 +503,21 @@ div.scrollY {
 #lay-form-send > div.layer-base-conts > div.mem-form > textarea::placeholder {
     font-size: 13px;
     color: rgb(128, 128, 128, 0.5);
- }
+}
 
 #lay-form-send > div.layer-base-conts > div.mem-form > textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     font-size: 13px;
-        color: rgb(128, 128, 128, 0.5);
+    color: rgb(128, 128, 128, 0.5);
 }
 
 #lay-form-send > div.layer-base-conts > div.mem-form > textarea::-moz-placeholder { /* Firefox 19+ */
     font-size: 13px;
-        color: rgb(128, 128, 128, 0.5);
+    color: rgb(128, 128, 128, 0.5);
 }
 
 #lay-form-send > div.layer-base-conts > div.mem-form > textarea:-ms-input-placeholder { /* IE 10+ */
     font-size: 13px;
-        color: rgb(128, 128, 128, 0.5);
+    color: rgb(128, 128, 128, 0.5);
 }
 
 .site-status-toggle {
