--- a/src/main/resources/static/common/css/contents.css
+++ b/src/main/resources/static/common/css/contents.css
@@ -737,6 +737,7 @@ select:-ms-expand{display:none;}
 .layer-base .btn-btm{width:100%; margin-top:2rem; display: flex; justify-content: flex-end;}
 .layer-base .btn-btm>*{width:7.4rem; height:2.8rem; margin-left:0.6rem; background-color: #6975ac; font-size:1.4rem; line-height:1; color: #fff; text-align: center; display: flex; align-items: center; justify-content: center; border-radius:99px; cursor: pointer;}
 .layer-base .btn-btm>*[blue]{background-color: #2e5fc3;}
+.layer-base .btn-btm>*[red]{background-color: #b43232;}
 
 
 #lay-alarm-history{}
@@ -811,6 +812,9 @@ select:-ms-expand{display:none;}
 
 #lay-form-write07{width:640px;}
 #lay-form-write07.wide{width:124rem;}
+
+#lay-form-write08{width:840px;}
+#lay-form-write08.wide{width:124rem;}
 
 
 .layer-member{width:88rem;}
