정렬 수정 필수값 수정 로거인덱스 업로드 추가 헤더 체크박스 제거

--- a/src/main/resources/static/common/css/jquery.ui.lastest.css
+++ b/src/main/resources/static/common/css/jquery.ui.lastest.css
@@ -945,10 +945,10 @@ body .ui-tooltip {
 .ui-state-default .ui-icon {
 	background-image: url(images/ui-icons_ffffff_256x240.png)/*{iconsDefault}*/;
 }
-.ui-state-hover .ui-icon,
-.ui-state-focus .ui-icon {
-	background-image: url(images/ui-icons_454545_256x240.png)/*{iconsHover}*/;
-}
+/*.ui-state-hover .ui-icon,*/
+/*.ui-state-focus .ui-icon {*/
+/*	background-image: url(images/ui-icons_454545_256x240.png)!*{iconsHover}*!;*/
+/*}*/
 .ui-state-active .ui-icon {
 	background-image: url(images/ui-icons_454545_256x240.png)/*{iconsActive}*/;
 }
