--- a/src/main/resources/static/common/css/contents.css
+++ b/src/main/resources/static/common/css/contents.css
@@ -3656,82 +3656,679 @@ select:-ms-expand {
     box-sizing: border-box; /* 패딩이 포함된 크기로 계산 */
 }
 
-/*[e] LAYER POPUP */
+html, body {
+    overflow: hidden;
+}
 
+input[readonly]:not(.flatpickr-input) {
+    background-color: #e0e0e0 !important;
+}
 
-/*
-transform: scale(1.1) 부분을
-transform: scale(1.1) rotate(.001deg); 로 변경하면 부드럽게 처리되네요
+textarea[readonly] {
+    background-color: #e0e0e0 !important;
+}
 
+#global-menu {
+    pointer-events: none;
+}
 
-display: flex; flex-wrap: wrap; flex-direction: row; align-content: center; justify-content: center; -ms-flex-align:center;
-display: flex; flex-wrap: wrap; flex-direction: row; align-items: center; justify-content: center; -ms-flex-align:center;
-display: flex; align-items: center; justify-content: center;
+#gnb-menu, #overall-status, #site-status {
+    pointer-events: all;
+}
 
-맨 앞에 정렬
-justify-content: flex-start;
-​
-맨 끝에 정렬
-justify-content: flex-end;
+#header {
+    position: fixed;
+}
 
-가운데 정렬
-justify-content: center;
+#gnb-menu .menu-sub > li a.active {
+    color: #90da00;
+}
 
-서로 같은 간격으로 박스들이 조정됨.
-justify-content: space-between;​
+#road-map {
+    z-index: 9;
+}
 
-컨텐츠 뿐만 아니라 그 주변도 같은 간격으로 조정됨.
-justify-content: space-around;
+#contents {
+    max-height: calc(100% - 60px);
+}
 
-​
+.hide {
+    display: none !important;
+}
 
-* 수직으로 적용
-align-items
-
-컨테이너의 꼭대기로 정렬
-justify-content: flex-start
-​
-컨테이너의 바닥으로 정렬
-flex-end​
-
-가운데로 정렬
-center
-
-컨테이너의 시작 위치에 정렬
-baseline​
-
-컨테이너에 맞도록 늘린다.
-stretch
-
-
-.list_ol_01 {counter-reset:item; margin-bottom:10px;}
-.list_ol_01 > li {position: relative; font-size: 16px; line-height: 1.75; margin-bottom:4px; color: #636363; padding-left:26px;}
-.list_ol_01 > li:last-child {margin-bottom: 0;}
-.list_ol_01 > li:before {counter-increment: item; content: counter(item); width: 18px; height: 18px; display: inline-block; background: #fff; border:1px solid #636363; color: #636363; border-radius: 50%; text-align: center; line-height:18px; font-size: 10px; position: absolute; top: 5px; left: 0; font-weight:400;}
-
--webkit-transform: translateY(-50%); transform: translateY(-50%);
--webkit-transform: translateX(-50%); transform: translateX(-50%);
-filter:grayscale(100%) blur(0px); -webkit-filter:grayscale(100%) blur(0px);
-transition: all .5s linear;
-transition: all .5s ease-out;
-transform:scale(100%);
-transform:rotate(180deg);
--webkit-transition-timing-function:ease-in linear; transition-timing-function:ease-in linear;
--webkit-transition-delay: .8s; transition-delay: .8s;
-:before{content: ""; width: 24px; height: 24px; background-color: #fff; border:1px solid #666; display: inline-block; position:absolute; left: 0; top:0px; box-sizing: border-box;}
-display: flex; justify-content: space-between; // 양쪽 끝 정렬
-display: flex; justify-content: space-around; // 센터 정렬
-display: block; overflow: hidden; text-overflow: ellipsis; white-space: nowrap; //한줄 감추기
-display: block; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; overflow: hidden; text-overflow: ellipsis; //두줄 감추기
-active
-:first-child
-text-indent:-99999px;
-!important
-display:table;
-table-layout:fixed;
-display:table-row;
-display:table-cell;
-box-sizing:border-box;
-word-break:keep-all; word-wrap:break-word;
-border-radius:2px;
+/**
+jqgrid customize
 */
+
+.bTable input[type="file"], .bTable input[type="text"], .bTable input[type="number"], .bTable input[type="password"], .bTable select, .bTable textarea {
+    border: initial;
+    text-align: initial;
+    padding: 0 5px;
+}
+
+.bTable .ui-jqgrid input[type="file"], .bTable .ui-jqgrid input[type="text"], .bTable .ui-jqgrid input[type="number"], .bTable .ui-jqgrid select, .bTable .ui-jqgrid textarea {
+    text-align: initial;
+    padding: 0 5px;
+    line-height: 1.5;
+    height: 26px;
+    margin: 0;
+    font-size: inherit;
+    outline: none;
+}
+
+.ui-jqgrid input, select, textarea {
+    outline: none;
+}
+
+.ui-jqgrid input:focus, select:focus, textarea:focus {
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    outline: none;
+}
+
+.ui-jqgrid .ui-search-table td.ui-search-clear {
+    width: 10px;
+}
+
+.ui-jqgrid div, .ui-jqgrid td {
+    font-size: 1.5rem;
+    line-height: 26px; /* row 의 높이 */
+    color: #47474c;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    background: initial;
+}
+
+.ui-jqgrid .ui-jqgrid-hdiv {
+    border-bottom: 0;
+}
+
+.ui-jqgrid td input, .ui-jqgrid td select, .ui-jqgrid td textarea {
+    padding: 0;
+}
+
+.ui-search-input input {
+    border: 0;
+}
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+    font-weight: 400;
+    color: #fff;
+}
+
+.ui-jqgrid .ui-jqgrid-htable th {
+    height: 33px;
+}
+
+.ui-jqgrid .ui-jqgrid-htable .ui-th-div {
+    height: 25px;
+    margin-top: 0;
+    color: #fff;
+}
+
+.ui-widget-content {
+    border: 0;
+}
+
+.ui-jqgrid tr.jqgrow td {
+    border-color: #d3d3d3 !important;
+}
+
+.ui-jqgrid tr.cctv_selected {
+    background-image: unset;
+    background-color: #cae2fd;
+}
+
+.ui-search-toolbar .ui-state-default.ui-th-ltr {
+    background: #fff;
+}
+
+.ui-jqgrid-labels .ui-th-column {
+    background: #2a2d6b;
+}
+
+.paginate table td {
+    font-size: 1.2rem;
+    line-height: 30px;
+    padding-right: 5px;
+}
+
+.ui-jqgrid-sortable span.s-ico {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    display: block;
+}
+
+.ui-jqgrid input,
+.ui-jqgrid button,
+.ui-jqgrid textarea,
+.ui-jqgrid select {
+    -webkit-appearance: auto;
+}
+
+.bTable textarea {
+    text-align: left !important;
+    padding: 10px 5px;
+}
+
+.ui-state-hover,
+.ui-widget-content .ui-state-hover,
+.ui-widget-header .ui-state-hover,
+.ui-state-focus,
+.ui-widget-content .ui-state-focus,
+.ui-widget-header .ui-state-focus {
+    background: #dadada; /* 그리드 hover 배경 */
+}
+
+.ui-jqgrid-labels .ui-th-column.ui-state-hover {
+    background: #3d4185; /* 그리드 헤더 hover 배경 */
+}
+
+.navCenter span {
+    min-width: 25px;
+    display: inline-block;
+}
+
+.navCenter .customPageNumberBtn a {
+    width: 2.9rem;
+    height: 2.9rem;
+    background-color: #fff;
+    border: 1px solid #dbdbdb;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    position: relative;
+    margin-left: -1px;
+}
+
+#contents .contents-in {
+    display: flex;
+    flex-direction: column;
+    padding: 35px;
+}
+
+#contents .gridSpacer {
+    flex-grow: 1;
+}
+
+#contents .paginate {
+    flex-shrink: 1;
+}
+
+.ui-jqgrid .loading, .loading_pivot {
+    display: block;
+    position: absolute;
+    z-index: 101;
+    background: #fff;
+    color: #888;
+    font-size: 13px;
+    width: 110px;
+}
+
+.layer-alarm.fancybox__content {
+    z-index: 120;
+}
+
+.ui-search-input select {
+    width: 100%;
+    padding: 2px 5px !important;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.ui-search-input select option {
+    /* color: #fff; */
+    font-size: 15px;
+}
+
+/* dashboard */
+.overall-status_re .weather-img span {
+    font-weight: bold;
+    font-size: 18px;
+    position: relative;
+    color: cornflowerblue;
+}
+
+.overall-status_re .weather-img {
+    display: inline-block;
+    width: 70px;
+    text-align: center;
+    vertical-align: top;
+}
+
+.overall-status_re .weather-detail {
+    display: inline-block;
+    width: 185px;
+    margin: 0 0 0 15px;
+    font-size: 15px;
+    color: #ccc;
+}
+
+#site-status .site-zone-area {
+    margin-top: 5px;
+}
+
+#site-status .site-zone-list {
+    margin-top: 5px;
+}
+
+.search-area select {
+    padding: 0 4rem 0 2rem;
+    background: url(/images/bg_select_arr_m.png) no-repeat 90% center/1rem;
+    line-height: 3.6rem;
+    text-align: left;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+
+.cctvList .contents-in {
+    height: calc(100% - 4.6rem);
+}
+
+.cctvList .cctvContainer img {
+    border: 1px solid #222;
+}
+
+div.scrollY {
+    overflow-y: auto;
+}
+
+.visionBtn {
+    width: 100px;
+    text-align: center;
+    float: right;
+    border: 1px solid #fff;
+    border-radius: 6px;
+    padding: 5px 0;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.videoLabel {
+    font-family: 'Pretendard', sans-serif;
+    position: absolute;
+    text-align: left;
+    height: 30px;
+    padding: 15px 5px;
+    font-size: 21px;
+    color: #fff;
+    top: 0;
+    display: block;
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.videoControl {
+    position: absolute;
+    text-align: right;
+    height: 30px;
+    padding: 7px 2px;
+    font-size: 21px;
+    color: #fff;
+    top: 0;
+    right: 0;
+    display: none;
+    background: rgba(0, 0, 0, 0.1);
+}
+
+.videoControl i {
+    margin-right: 5px;
+}
+
+.videoControl i {
+    cursor: pointer;
+}
+
+
+.cctvContainer:hover .videoControl {
+    display: block;
+}
+
+.cctv-list .cctvContainer img {
+    width: 100%;
+    height: 100%;
+    background-color: #333;
+}
+
+#contents .cctv-list > li {
+    padding-bottom: 28.5%;
+    overflow: hidden; /* 내용이 컨테이너를 넘어가지 않도록 설정 */
+    position: relative;
+}
+
+.cctv-list .cctvContainer.full {
+    position: fixed !important;
+    z-index: 9999;
+}
+
+.btnFullScreenClose {
+    position: fixed;
+    z-index: 999999999999;
+    top: 30px;
+    right: 30px;
+    font-size: 50px;
+    color: #fff;
+    display: none;
+    cursor: pointer;
+    opacity: .2;
+}
+
+.btnFullScreenClose:hover {
+    opacity: initial;
+}
+
+.dimm {
+    background-color: #333;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    z-index: 9998;
+    display: none;
+    top: 0;
+    left: 0;
+}
+
+.dimm.on {
+    display: block;
+}
+
+#lay-cctv-view.full {
+    width: 75%;
+    height: 100%;
+}
+
+#lay-cctv-view.full img {
+    width: 100%;
+    height: 100%;
+}
+
+.search-form.search-area {
+    justify-content: left;
+    margin-bottom: 0;
+}
+
+.search-form.search-area select {
+    padding: 0 4rem 0 2rem;
+    background: url(/images/bg_select_arr_m.png) no-repeat 90% center/1rem;
+    line-height: 3.6rem;
+    text-align: left;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    margin-right: 5px;
+    background-color: #fff;
+    max-width: 100px;
+}
+
+.search-form.search-area input {
+    max-width: 280px;
+}
+
+.flatpickr-time, .paginate {
+    -ms-user-select: none;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+.flatpickr-confirm {
+    background: #569ff7;
+    color: #fff;
+}
+
+#contents .contents-re {
+    padding: 3rem;
+}
+
+.searchGroup > a {
+    height: 2.8rem;
+    margin-left: 1rem;
+    padding: 0 2rem;
+    background-color: #6975ac;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1;
+    color: #fff;
+    text-align: center;
+    border-radius: 99px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.search-area.searchArea .searchGroup {
+    flex: initial;
+    width: initial;
+}
+
+.chartGroup {
+    width: 30px;
+    height: 30px;
+    color: #555;
+    font-size: 17px;
+    position: absolute;
+    z-index: 1;
+    cursor: pointer;
+    right: 60px;
+    top: 110px;
+}
+
+.check-box input[type=checkbox] + label > .graphic:before {
+    background: initial;
+    border: none;
+    left: -1px;
+    top: -1px;
+    z-index: 2;
+}
+
+.check-box input[type=checkbox]:checked + label > .graphic {
+    background: url("/images/check.svg") no-repeat center 30%/70%;
+    background-color: #4b7cea;
+    border-color: #4472d9;
+}
+
+.check-box input[type=checkbox]:checked + label > .graphic:before {
+    opacity: 1;
+}
+
+.searchArea .inputBox {
+    flex: initial;
+    width: fit-content;
+    margin-right: 10px;
+}
+
+.searchArea .check-box input[type=radio] + label > .graphic:before {
+    background-color: initial;
+}
+
+.searchArea .check-box input[type=radio]:checked + label > .graphic:before {
+    background-color: #4b7cea;
+}
+
+.searchArea .inputBox span.labelText {
+    font-size: 14px;
+    line-height: 18px;
+    color: #fefefe;
+}
+
+.searchArea .check-box input[type=checkbox]:checked + label, .check-box input[type=radio]:checked + label {
+    color: #fefefe;
+}
+
+.ui-jqgrid-hbox .ui-search-input select {
+    height: 24px;
+    background: initial;
+}
+
+#lay-form-send > div.layer-base-conts > div.mem-form > textarea {
+    margin: 5px 0 5px 0;
+    width: 100%;
+    height: 15em;
+    font-size: 14px;
+    color: black;
+}
+
+#lay-form-send > div.layer-base-conts > div.mem-form > textarea::placeholder {
+    font-size: 13px;
+    color: rgb(128, 128, 128, 0.5);
+}
+
+#lay-form-send > div.layer-base-conts > div.mem-form > textarea::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    font-size: 13px;
+    color: rgb(128, 128, 128, 0.5);
+}
+
+#lay-form-send > div.layer-base-conts > div.mem-form > textarea::-moz-placeholder { /* Firefox 19+ */
+    font-size: 13px;
+    color: rgb(128, 128, 128, 0.5);
+}
+
+#lay-form-send > div.layer-base-conts > div.mem-form > textarea:-ms-input-placeholder { /* IE 10+ */
+    font-size: 13px;
+    color: rgb(128, 128, 128, 0.5);
+}
+
+.site-status-toggle {
+    width: 16px;
+    display: none;
+}
+
+.site-status-toggle.active {
+    display: flex;
+    background-color: #6975ac;
+}
+
+.site-status-toggle .overall-status-btn span {
+    color: white;
+    font-size: 16px !important;
+}
+
+
+div.site-status-toggle.active > button {
+    transform: rotate(180deg)
+}
+
+div.site-status-toggle.active > button.show {
+    transform: rotate(0deg)
+}
+
+.layer-base {
+    min-height: 300px;
+}
+
+.fullscreen.full .videoControl .btnMaximize {
+    display: none;
+}
+
+#lay-cctv-view.layer-base .layer-base-conts.nosignal {
+    background: rgb(20, 20, 20);
+    font-family: "Source Code Pro";
+    color: white;
+}
+
+.cctvContainer.nosignal {
+    background: rgb(20, 20, 20);
+    font-family: "Source Code Pro";
+    color: white;
+}
+
+.nosignal .container {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.nosignal .container .title {
+    --blur: .13rem;
+    position: relative;
+    mix-blend-mode: screen;
+    font-size: 40px;
+    font-weight: 600;
+    color: transparent;
+    letter-spacing: -1px;
+    white-space: nowrap;
+    text-shadow: 0 0 var(--blur) rgba(0, 255, 0, 1),
+    0 0 2rem rgba(255, 255, 255, 0.6);
+    opacity: 0;
+    animation: turnon .4s 1s steps(1), flicker .07s steps(1) 1.4s infinite;
+
+    &::before, &::after {
+        content: attr(data-text);
+        position: absolute;
+        top: 0;
+        left: 0;
+        mix-blend-mode: screen;
+    }
+
+    &::before {
+        transform: translate(-.1rem, -.05rem);
+        text-shadow: 0 0 var(--blur) rgba(255, 0, 0, 1);
+    }
+
+    &::after {
+        transform: translate(.1rem, .05rem);
+        text-shadow: 0 0 var(--blur) rgba(0, 0, 240, 1);
+    }
+}
+
+@keyframes turnon {
+    0% {
+        opacity: 0;
+    }
+    10% {
+        opacity: .3;
+    }
+    20% {
+        opacity: .1;
+    }
+    30% {
+        opacity: .6;
+    }
+    40% {
+        opacity: .3;
+    }
+    50% {
+        opacity: .4;
+    }
+    60% {
+        opacity: .1;
+    }
+    70% {
+        opacity: .5;
+    }
+    80% {
+        opacity: .2;
+    }
+    90% {
+        opacity: .6;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes flicker {
+    0% {
+        opacity: 1;
+    }
+    25% {
+        opacity: .88;
+    }
+    75% {
+        opacity: 1;
+    }
+    100% {
+        opacity: .6;
+    }
+}
+
+.paginate.customPaginateBar button {
+    font-size: 1.3rem;
+}
