UI/UX 통일 (정렬) css 공통 처리 완료

--- a/src/main/resources/static/common/css/grid.css
+++ b/src/main/resources/static/common/css/grid.css
@@ -114,6 +114,7 @@ jqgrid customize
 
 .ui-jqgrid tr.jqgrow td {
     border-color: #d3d3d3 !important;
+    text-align: center;
 }
 
 .ui-jqgrid tr.cctv_selected {
