--- a/src/main/resources/static/common/css/contents.css
+++ b/src/main/resources/static/common/css/contents.css
@@ -991,6 +991,23 @@ select:-ms-expand {
     margin-bottom: 2.2rem;
 }
 
+.search-top_ > a.btns {
+    height: 2.8rem;
+    margin-left: 1rem;
+    padding: 0 2rem;
+    background-color: #6975ac; /* 보라색 배경 */
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 2.8rem; /* line-height는 height와 맞추거나 1로 설정 후 flex 정렬 */
+    color: #fff; /* 흰색 글씨 */
+    text-align: center;
+    border-radius: 99px; /* 둥근 모서리 */
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    justify-content: center; /* 글자 가운데 정렬 */
+}
+
 .search-top_ input[type="text"],
 .search-top_ select {
     width: auto;
